--- a/app/src/main/res/layout/activity_fragment_two.xml
+++ b/app/src/main/res/layout/activity_fragment_two.xml
@@ -98,8 +98,9 @@
 
     <Button
         android:id="@+id/btnStart"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:textSize="15sp"
         android:text="計算"
         app:layout_constraintBottom_toBottomOf="@id/tvHeight"
         app:layout_constraintTop_toTopOf="@id/tvAge"
@@ -107,4 +108,67 @@
         app:layout_constraintStart_toEndOf="@id/tvAge"
 
          />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="你的BMR值為"
+        android:textSize="30dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/spActivityLevel" />
+
+    <TextView
+        android:id="@+id/tvBMR"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="尚未計算"
+        android:textSize="25sp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/textView6"
+        app:layout_constraintStart_toStartOf="@id/textView6"
+        app:layout_constraintEnd_toEndOf="@id/textView6" />
+
+    <Spinner
+        android:id="@+id/spActivityLevel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/textView10"
+        app:layout_constraintBottom_toBottomOf="@id/textView10"
+        app:layout_constraintStart_toEndOf="@id/textView10" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="你的TDEE為"
+        android:textSize="30dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@id/textView6"
+        app:layout_constraintEnd_toEndOf="@id/textView6"
+        app:layout_constraintTop_toBottomOf="@id/tvBMR"/>
+
+    <TextView
+        android:id="@+id/tvTDEE"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="尚未計算"
+        android:textSize="25sp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@id/textView8"
+        app:layout_constraintEnd_toEndOf="@id/textView8"
+        app:layout_constraintTop_toBottomOf="@id/textView8"/>
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="活動強度 :"
+        android:textSize="20sp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="@id/textView4"
+        app:layout_constraintTop_toBottomOf="@id/textView4"
+        app:layout_constraintEnd_toStartOf="@id/spActivityLevel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
