--- a/app/src/main/res/layout/activity_fragment_two.xml
+++ b/app/src/main/res/layout/activity_fragment_two.xml
@@ -171,4 +171,14 @@
         app:layout_constraintStart_toStartOf="@id/textView4"
         app:layout_constraintTop_toBottomOf="@id/textView4"
         app:layout_constraintEnd_toStartOf="@id/spActivityLevel" />
+
+    <ImageView
+        android:id="@+id/info_icon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_info"
+        android:layout_marginStart="10dp"
+        app:layout_constraintTop_toTopOf="@id/textView6"
+        app:layout_constraintBottom_toBottomOf="@id/textView6"
+        app:layout_constraintStart_toEndOf="@id/textView6"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
