--- a/app/src/main/res/layout/activity_fragment_three.xml
+++ b/app/src/main/res/layout/activity_fragment_three.xml
@@ -12,8 +12,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        tools:layout_editor_absoluteX="179dp"
-        tools:layout_editor_absoluteY="94dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -22,8 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        tools:layout_editor_absoluteX="171dp"
-        tools:layout_editor_absoluteY="230dp"
+
         app:layout_constraintTop_toBottomOf="@+id/tvWeight"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -33,9 +30,52 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        tools:layout_editor_absoluteX="171dp"
-        tools:layout_editor_absoluteY="364dp"
         app:layout_constraintTop_toBottomOf="@id/tvBMR"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <EditText
+        android:id="@+id/edActivity"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:hint="輸入你的活動 (英文)"
+        android:layout_marginTop="70dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <EditText
+        android:id="@+id/edDuration"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:hint="輸入時間 (分鐘)"
+        android:inputType="number"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@id/edActivity"
+        app:layout_constraintEnd_toEndOf="@id/edActivity"
+        app:layout_constraintTop_toBottomOf="@id/edActivity"/>
+
+    <Button
+        android:id="@+id/btnSubmit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="送出"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@id/edActivity"
+        app:layout_constraintEnd_toEndOf="@id/edActivity"
+        app:layout_constraintTop_toBottomOf="@id/edDuration"/>
+
+    <TextView
+        android:id="@+id/tvResponse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:text="Response will appear here"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@id/edActivity"
+        app:layout_constraintEnd_toEndOf="@id/edActivity"
+        app:layout_constraintTop_toBottomOf="@id/btnSubmit" />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
