--- a/app/src/main/res/layout/activity_fragment_three.xml
+++ b/app/src/main/res/layout/activity_fragment_three.xml
@@ -12,16 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/tvBMR"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-
-        app:layout_constraintTop_toBottomOf="@+id/tvWeight"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -30,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_constraintTop_toBottomOf="@id/tvBMR"
+        app:layout_constraintTop_toBottomOf="@id/tvWeight"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -38,7 +29,7 @@
         android:id="@+id/edActivity"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:hint="輸入你的活動 (英文)"
+        android:hint="輸入你的運動 (英文)"
         android:layout_marginTop="70dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,17 +56,11 @@
         app:layout_constraintEnd_toEndOf="@id/edActivity"
         app:layout_constraintTop_toBottomOf="@id/edDuration"/>
 
-    <TextView
-        android:id="@+id/tvResponse"
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/lvCalories"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:text="Response will appear here"
         android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="@id/edActivity"
-        app:layout_constraintEnd_toEndOf="@id/edActivity"
-        app:layout_constraintTop_toBottomOf="@id/btnSubmit" />
-
-
+        app:layout_constraintTop_toBottomOf="@id/btnSubmit"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
