--- a/app/src/main/res/layout/item_calories_burned.xml
+++ b/app/src/main/res/layout/item_calories_burned.xml
@@ -1,34 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="8dp">
 
     <TextView
-        android:id="@+id/activityName"
+        android:id="@+id/tvActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Activity"
         android:textSize="18sp"
-        android:textColor="#000000" />
+        android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/caloriesPerHour"
+        android:id="@+id/tvCaloriesPerHour"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp" />
+        android:text="tvCaloriesPerHour"
+        android:textSize="16dp"/>
 
     <TextView
-        android:id="@+id/duration"
+        android:id="@+id/tvCalories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Calories"
         android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/totalCalories"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp" />
-
 </LinearLayout>
