--- a/app/src/main/res/layout/activity_fragment_four.xml
+++ b/app/src/main/res/layout/activity_fragment_four.xml
@@ -7,4 +7,86 @@
     android:layout_height="match_parent"
     tools:context=".FragmentFour">
 
+    <TextView
+        android:id="@+id/tvCalories"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="今日攝取熱量： 0"
+        android:textSize="25sp"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/tvWeight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="體重： 尚無資料"
+        android:layout_marginEnd="40dp"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toStartOf="@id/tvCalories"
+        app:layout_constraintTop_toTopOf="@id/tvCalories"/>
+
+    <TextView
+        android:id="@+id/tvTDEE"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TDEE： 尚無資料"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="@id/tvWeight"
+        app:layout_constraintTop_toBottomOf="@id/tvWeight"/>
+
+    <EditText
+        android:id="@+id/edFood"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:hint="輸入你的食物 (英文)"
+        android:layout_marginTop="70dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+
+    <Button
+        android:id="@+id/btnSubmit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="送出"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@id/edFood"
+        app:layout_constraintEnd_toEndOf="@id/edFood"
+        app:layout_constraintTop_toBottomOf="@id/edFood"/>
+
+    <TextView
+        android:id="@+id/tvFood"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="食物資訊會顯示在這"
+        android:textSize="20sp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnSubmit"/>
+
+    <Button
+        android:id="@+id/btnShowRecord"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="查看紀錄"
+        android:layout_marginStart="20dp"
+        app:layout_constraintStart_toEndOf="@id/btnSubmit"
+        app:layout_constraintTop_toTopOf="@id/btnSubmit"
+        app:layout_constraintBottom_toBottomOf="@id/btnSubmit" />
+
+    <Button
+        android:id="@+id/btnAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="加入"
+        android:visibility="invisible"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/tvFood"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
