--- a/app/src/main/res/layout/activity_fragment_four.xml
+++ b/app/src/main/res/layout/activity_fragment_four.xml
@@ -59,6 +59,16 @@
         app:layout_constraintEnd_toEndOf="@id/edFood"
         app:layout_constraintTop_toBottomOf="@id/edFood"/>
 
+    <Button
+        android:id="@+id/btnCustom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="自訂"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toStartOf="@id/btnSubmit"
+        app:layout_constraintTop_toTopOf="@id/btnSubmit"
+        app:layout_constraintBottom_toBottomOf="@id/btnSubmit" />
+
     <TextView
         android:id="@+id/tvFood"
         android:layout_width="wrap_content"
